# mini_project

./: .gitignore  CMakeLists.txt  ChatDialog.cpp  ChatDialog.h  Common.h  Common.h.autosave  CustomCalendarWidget.cpp  CustomCalendarWidget.h  GoogleAuthManager.cpp  GoogleAuthManager.h  LoginDialog.cpp  LoginDialog.h  MyPageDialog.cpp  MyPageDialog.h  RegisterDialog.cpp  RegisterDialog.h  ScheduleDialog.cpp  ScheduleDialog.h  SearchDialog.cpp  SearchDialog.h  Server.cpp  Server.h  SharedCalDialog.cpp  SharedCalDialog.h  WeatherManager.cpp  WeatherManager.h  client_main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scheduledialog.ui  secrets.h.example  server_main.cpp  기획서.md
.claude/: settings.local.json
